loop-modernise run-2: three slices, and the two blind spots reviewing them exposed (D89)
The loop committed 3 of 3 with no repair attempt (Integer/Long valueOf,
getSelectedItems' quadratic regrow, the four new String(...) copies outside the
fenced parser). Six slices across two runs; the repair path has still never run.

Reviewed by 14 mutation runs rather than by inspection, per D88's lesson. Ten
came back red; the four green ones are the finding.

Blind spot #3: both ten-argument drawImage overrides record only the destination
rect, so Thinlet.fill's gradient sampling is unobservable — moving the recorded
destination fails 76 of 94 golden tests, collapsing the unrecorded source rect
to 1x1 passes 94 of 94.

And a category neither D86 nor D88 named: evm = -1 turns the whole Insignia
workaround on and passes all 189 goldens, because the one-pixel error it
corrects is inside D7's +/-2 px tolerance.

RENDERING-PRIMITIVES.md inherited the first gap and described the gradient tiles
as icon blits; corrected here. Both gaps are left open and recorded (D89, plus a
ROADMAP 3c backlog item for the EVM disposition).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01YKm3NaHrGt1Rq6ep413SJZ