@@ -4612,18 +4612,15 @@ public class Thinlet extends Container implements Runnable, Serializable {
      */
     public Object[] getSelectedItems(Object component) {
         String classname = getClass(component);
-        Object[] selecteds = new Object[0];
+        ArrayList<Object> selecteds = new ArrayList<>();
         for (Object item = findNextItem(component, classname, null);
                 item != null;
                 item = findNextItem(component, classname, item)) {
             if (getBoolean(item, "selected", false)) {
-                Object[] temp = new Object[selecteds.length + 1];
-                System.arraycopy(selecteds, 0, temp, 0, selecteds.length);
-                temp[selecteds.length] = item;
-                selecteds = temp;
+                selecteds.add(item);
             }
         }
-        return selecteds;
+        return selecteds.toArray();
     }
 
     /**
@@ -5507,7 +5504,13 @@ public class Thinlet extends Container implements Runnable, Serializable {
         AttributeDescriptor definition = getDefinition(getClass(component), key, null);
         key = definition.name;
         if (is(definition.type, "string")) {
-            value = (encoding == null) ? new String(value) : new String(value.getBytes(), 0, value.length(), encoding);
+            // No defensive copy of the incoming value: set(Object,Object,Object) compares a
+            // stored value with .equals, never by identity. Only model KEYS are identity-
+            // compared (get's entry[0] == key; the interning half is pinned by
+            // DescriptorContractTest, which sets through a de-interned caller key).
+            if (encoding != null) {
+                value = new String(value.getBytes(), 0, value.length(), encoding);
+            }
             set(component, key, value);
             if (is(key, "text")) {
                 spinValueFromText(component); // D83
@@ -5554,7 +5557,10 @@ public class Thinlet extends Container implements Runnable, Serializable {
                 if (equals == -1) {
                     throw new IllegalArgumentException(token);
                 }
-                putProperty(component, new String(token.substring(0, equals)), new String(token.substring(equals + 1)));
+                // substring has returned an independent String since Java 7, and putProperty
+                // stores into a Hashtable keyed by equals/hashCode — not the identity-compared
+                // ':' model keys — so neither 2005 copy was load-bearing.
+                putProperty(component, token.substring(0, equals), token.substring(equals + 1));
             }
         } else if (is(definition.type, "font")) {
             String name = null;
@@ -5572,7 +5578,7 @@ public class Thinlet extends Container implements Runnable, Serializable {
                     try {
                         size = Integer.parseInt(token);
                     } catch (NumberFormatException nfe) {
-                        name = (name == null) ? new String(token) : (name + " " + token);
+                        name = (name == null) ? token : (name + " " + token);
                     }
                 }
             }
@@ -5870,7 +5876,7 @@ public class Thinlet extends Container implements Runnable, Serializable {
                         keycode = KeyEvent.class.getField("VK_" + token).getInt(null);
                     }
                 }
-                keystroke = new Long(((long) modifiers) << 32 | keycode);
+                keystroke = Long.valueOf(((long) modifiers) << 32 | keycode);
             } catch (Exception exc) {
                 throw new IllegalArgumentException(token);
             }
@@ -5941,7 +5947,7 @@ public class Thinlet extends Container implements Runnable, Serializable {
                     (arg.charAt(0) == '\'')
                     && (arg.charAt(arg.length() - 1) == '\'')) {
                 data[2 + 3 * i] = "constant";
-                data[2 + 3 * i + 1] = new String(arg.substring(1, arg.length() - 1));
+                data[2 + 3 * i + 1] = arg.substring(1, arg.length() - 1);
                 parametertypes[i] = String.class;
             } else {
                 int dot = arg.indexOf('.');
@@ -6135,7 +6141,7 @@ public class Thinlet extends Container implements Runnable, Serializable {
     }
 
     private boolean setInteger(Object component, String key, int value, int defaultvalue) {
-        return set(component, key, (value == defaultvalue) ? null : new Integer(value));
+        return set(component, key, (value == defaultvalue) ? null : Integer.valueOf(value));
     }
 
     // package-private for Renderer (D48 seam; japicmp-invisible)
